[project]
name = "elixir"
version = "0.1.0"
description = "Fast, Scalable and Flexible WSGI Wrapper"
authors = [
    {name = "HinaseDev", email="hinase@tutanota.com"},
    {email = "hinase@tutanota.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.6"

keywords = ["packaging", "dependency", "infer", "pyproject.toml"]

classifiers = [
    "Topic :: Software Development"
]

# Requirements: This is done differently by poetry!
dependencies = [
]

[project.optional-dependencies]
dev = [
    "black>=18.3-alpha.0",
]

[project.urls]
homepage = "https://github.com/HinaseDev/Elixir"
documentation = "https://github.com/HinaseDev/elixir/blob/main/doc/docs.md"
repository = "https://github.com/HinaseDev/Elixir"

[project.scripts]
poetry = "infer_pyproject.cli:main"

[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target_version = ['py36']
include = '\.pyi?$'
exclude = ''
